--- a/main/resources/assets/grapplemod/lang/en_US.lang
+++ b/main/resources/assets/grapplemod/lang/en_US.lang
@@ -2,3 +2,4 @@ item.grapplinghook.name=Grappling Hook
 item.hookshot.name=Motorized Grappling Hook
 item.launcheritem.name=Ender Staff
 item.longfallboots.name=Long Fall Boots
+item.enderhook.name=Ender Grappling Hook
