--- a/main/resources/assets/grapplemod/lang/en_US.lang
+++ b/main/resources/assets/grapplemod/lang/en_US.lang
@@ -3,3 +3,6 @@ item.hookshot.name=Motorized Grappling Hook
 item.launcheritem.name=Ender Staff
 item.longfallboots.name=Long Fall Boots
 item.enderhook.name=Ender Grappling Hook
+item.magnetbow.name=Magnetic Grappling Hook
+item.repeller.name=Magnetic Forcefield
+item.multihook.name=Dual Motorized Grappling Hooks
