--- a/main/resources/assets/grapplemod/lang/en_US.lang
+++ b/main/resources/assets/grapplemod/lang/en_US.lang
@@ -6,3 +6,4 @@ item.enderhook.name=Ender Grappling Hook
 item.magnetbow.name=Magnetic Grappling Hook
 item.repeller.name=Magnetic Forcefield
 item.multihook.name=Dual Motorized Grappling Hooks
+item.smarthook.name=Smart Motorized Grappling Hook
