--- a/main/resources/assets/grapplemod/lang/en_US.lang
+++ b/main/resources/assets/grapplemod/lang/en_US.lang
@@ -16,4 +16,5 @@ item.ropeupgradeitem.name=Rope Grappling Hook Upgrade
 item.staffupgradeitem.name=Ender Staff Grappling Hook Upgrade
 item.swingupgradeitem.name=Swing Grappling Hook Upgrade
 item.throwupgradeitem.name=Hook Thrower Grappling Hook Upgrade
+item.limitsupgradeitem.name=Limits Grappling Hook Upgrade
 tile.block_grapple_modifier.name=Grappling Hook Modifier
