--- a/main/resources/assets/grapplemod/lang/en_US.lang
+++ b/main/resources/assets/grapplemod/lang/en_US.lang
@@ -18,3 +18,5 @@ item.swingupgradeitem.name=Swing Grappling Hook Upgrade
 item.throwupgradeitem.name=Hook Thrower Grappling Hook Upgrade
 item.limitsupgradeitem.name=Limits Grappling Hook Upgrade
 tile.block_grapple_modifier.name=Grappling Hook Modifier
+key.motoronoff.desc=Motor On/Off
+key.jumpanddetach.desc=Jump and Detach
