--- a/main/resources/assets/grapplemod/lang/en_US.lang
+++ b/main/resources/assets/grapplemod/lang/en_US.lang
@@ -20,3 +20,7 @@ item.limitsupgradeitem.name=Limits Grappling Hook Upgrade
 tile.block_grapple_modifier.name=Grappling Hook Modifier
 key.motoronoff.desc=Motor On/Off
 key.jumpanddetach.desc=Jump and Detach
+key.slow.desc=Slow down / Stop swinging
+key.slow.desc=Climb
+key.climbup.desc=Climb up
+key.climbdown.desc=Climb down
