Control double hooks separately

--- a/main/resources/assets/grapplemod/lang/en_US.lang
+++ b/main/resources/assets/grapplemod/lang/en_US.lang
@@ -21,6 +21,9 @@ tile.block_grapple_modifier.name=Grappling Hook Modifier
 key.motoronoff.desc=Motor On/Off
 key.jumpanddetach.desc=Jump and Detach
 key.slow.desc=Slow down / Stop swinging
-key.slow.desc=Climb
+key.climb.desc=Climb
 key.climbup.desc=Climb up
 key.climbdown.desc=Climb down
+key.leftthrow.desc=Throw Left Hook
+key.rightthrow.desc=Throw Right Hook
+key.enderlaunch.desc=Hook Ender Staff Launch
