--- a/main/resources/assets/grapplemod/lang/en_US.lang
+++ b/main/resources/assets/grapplemod/lang/en_US.lang
@@ -28,3 +28,88 @@ key.leftthrow.desc=Throw Left Hook
 key.rightthrow.desc=Throw Right Hook
 key.boththrow.desc=Throw Hook(s)
 key.enderlaunch.desc=Hook Ender Staff Launch
+
+grapplecustomization.maxlen.name=Rope Length
+grapplecustomization.phaserope.name=Phase Rope
+grapplecustomization.hookgravity.name=Gravity on hook
+grapplecustomization.throwspeed.name=Throw Speed
+grapplecustomization.reelin.name=Crouch to Reel In
+grapplecustomization.verticalthrowangle.name=Vertical Throw Angle
+grapplecustomization.motor.name=Motor Enabled
+grapplecustomization.motormaxspeed.name=Motor Maximum Speed
+grapplecustomization.motoracceleration.name=Motor Acceleration
+grapplecustomization.motorwhencrouching.name=Motor when On/Off button held
+grapplecustomization.motorwhennotcrouching.name=Motor when On/Off button not held
+grapplecustomization.smartmotor.name=Smart Motor
+grapplecustomization.motordampener.name=Sideways Motion Dampener
+grapplecustomization.pullbackwards.name=Pull Backwards
+grapplecustomization.playermovementmult.name=Swing speed
+grapplecustomization.enderstaff.name=Ender Staff
+grapplecustomization.repel.name=Forcefield Enabled
+grapplecustomization.repelforce.name=Repel Force
+grapplecustomization.attract.name=Magnet Enabled
+grapplecustomization.attractradius.name=Attraction Radius
+grapplecustomization.doublehook.name=Double Hook
+grapplecustomization.smartdoublemotor.name=Smart Motor
+grapplecustomization.angle.name=Angle
+grapplecustomization.sneakingangle.name=Angle when crouching
+grapplecustomization.oneropepull.name=Allow pulling with one rope
+grapplecustomization.sneakingverticalthrowangle.name=Crouching Vertical Angle 
+grapplecustomization.climbkey.name=Dedicated Climbing Key
+grapplecustomization.sticky.name=Sticky Rope
+grapplecustomization.detachonkeyrelease.name=Detach Hook On Button/Key Release
+
+grapplecustomization.maxlen.desc=The length of the rope
+grapplecustomization.phaserope.desc=Allows rope to phase through blocks
+grapplecustomization.hookgravity.desc=Gravity on hook when thrown
+grapplecustomization.throwspeed.desc=Speed of hook when thrown
+grapplecustomization.reelin.desc=Before the hook is attached, crouching will stop the hook from moving farther and slowly reel it in
+grapplecustomization.verticalthrowangle.desc=Throws the grappling hook above the crosshairs by this angle
+grapplecustomization.motor.desc=Pulls player towards hook
+grapplecustomization.motormaxspeed.desc=Maximum speed of motor
+grapplecustomization.motoracceleration.desc=Acceleration of motor
+grapplecustomization.motorwhencrouching.desc=Motor is active when On/Off button (default: shift) is being held
+grapplecustomization.motorwhennotcrouching.desc=Motor is active when On/Off button (default: shift) is not being held
+grapplecustomization.smartmotor.desc=Adjusts motor speed so that player moves towards crosshairs (up/down)
+grapplecustomization.motordampener.desc=Reduces motion perpendicular to the rope so that the rope pulls straighter
+grapplecustomization.pullbackwards.desc=Motor pulls even if you are facing the other way
+grapplecustomization.playermovementmult.desc=Acceleration of player when using movement keys while swinging
+grapplecustomization.enderstaff.desc=Left click launches player forwards
+grapplecustomization.repel.desc=Player is repelled from nearby blocks when swinging
+grapplecustomization.repelforce.desc=Force nearby blocks exert on the player
+grapplecustomization.attract.desc=Hook is attracted to nearby blocks when thrown
+grapplecustomization.attractradius.desc=Radius of attraction
+grapplecustomization.doublehook.desc=Two hooks are thrown at once
+grapplecustomization.smartdoublemotor.desc=Adjusts motor speed so that player moves towards crosshairs (left/right) when used with motor
+grapplecustomization.angle.desc=Angle that each hook is thrown from center
+grapplecustomization.sneakingangle.desc=Angle that each hook is thrown from center when crouching (don't have 'crouch to reel in' enabled if you want to use this)
+grapplecustomization.oneropepull.desc=When motor is enabled and only one hook is attached, activate the motor (if disabled, wait until both hooks are attached before pulling)
+grapplecustomization.sneakingverticalthrowangle.desc=Throws the grappling hook above the crosshairs by this angle when crouching
+grapplecustomization.climbkey.desc=Ignore climb up/climb down keys unless the \"climb\" key is held
+grapplecustomization.sticky.desc=If the rope bends around a block as it is being thrown, attach at bend
+grapplecustomization.detachonkeyrelease.desc=When enabled, hook is only out while button/key is held down. Instead of clicking / pressing key again to detach the hook, release the button/key to detach thook.";}
+
+
+grappletooltip.throw.desc=- Throw grappling hook
+grappletooltip.release.desc=again - Release
+grappletooltip.double.desc=Double-
+grappletooltip.releaseandthrow.desc=- Release and throw again
+grappletooltip.jump.desc=- Release and jump (while in midair)
+grappletooltip.slow.desc=- Stop swinging
+grappletooltip.swing.desc=- Swing
+grappletooltip.climbup.desc=- Climb up
+grappletooltip.climbdown.desc=- Climb down
+grappletooltip.shiftcontrols.desc=(Hold Shift to see controls)
+grappletooltip.controlconfiguration.desc=(Hold Control to see full configuration)
+
+grapplemodifier.close.desc=Close
+grapplemodifier.reset.desc=Reset
+grapplemodifier.back.desc=Back
+grapplemodifier.incompatability.desc=Incompatability with other options
+grapplemodifier.limits.desc=Use limits upgrade to unlock
+grapplemodifier.locked.desc=Option locked due to config file (enable_... > 1)
+grapplemodifier.unlock1.desc=Category not unlocked:
+grapplemodifier.unlock2.desc=Please right click this block
+grapplemodifier.unlock3.desc=with the item:
+grapplemodifier.unlock4.desc=to unlock
+grapplemodifier.apply.desc=Right click with grappling hook to apply
