--- a/main/resources/assets/grapplemod/lang/en_US.lang
+++ b/main/resources/assets/grapplemod/lang/en_US.lang
@@ -7,6 +7,7 @@ item.magnetbow.name=Magnetic Grappling Hook
 item.repeller.name=Magnetic Forcefield
 item.multihook.name=Dual Motorized Grappling Hooks
 item.smarthook.name=Smart Motorized Grappling Hook
+
 item.baseupgradeitem.name=Base Grappling Hook Upgrade
 item.doubleupgradeitem.name=Double Grappling Hook Upgrade
 item.forcefieldupgradeitem.name=Forcefield Grappling Hook Upgrade
@@ -17,7 +18,9 @@ item.staffupgradeitem.name=Ender Staff Grappling Hook Upgrade
 item.swingupgradeitem.name=Swing Grappling Hook Upgrade
 item.throwupgradeitem.name=Hook Thrower Grappling Hook Upgrade
 item.limitsupgradeitem.name=Limits Grappling Hook Upgrade
+
 tile.block_grapple_modifier.name=Grappling Hook Modifier
+
 key.motoronoff.desc=Motor On/Off
 key.jumpanddetach.desc=Jump and Detach
 key.slow.desc=Slow down / Stop swinging
@@ -85,9 +88,9 @@ grapplecustomization.angle.desc=Angle that each hook is thrown from center
 grapplecustomization.sneakingangle.desc=Angle that each hook is thrown from center when crouching (don't have 'crouch to reel in' enabled if you want to use this)
 grapplecustomization.oneropepull.desc=When motor is enabled and only one hook is attached, activate the motor (if disabled, wait until both hooks are attached before pulling)
 grapplecustomization.sneakingverticalthrowangle.desc=Throws the grappling hook above the crosshairs by this angle when crouching
-grapplecustomization.climbkey.desc=Ignore climb up/climb down keys unless the \"climb\" key is held
+grapplecustomization.climbkey.desc=Ignore climb up/climb down keys unless the "climb" key is held
 grapplecustomization.sticky.desc=If the rope bends around a block as it is being thrown, attach at bend
-grapplecustomization.detachonkeyrelease.desc=When enabled, hook is only out while button/key is held down. Instead of clicking / pressing key again to detach the hook, release the button/key to detach thook.";}
+grapplecustomization.detachonkeyrelease.desc=When enabled, hook is only out while button/key is held down. Instead of clicking / pressing key again to detach the hook, release the button/key to detach hook.
 
 
 grappletooltip.throw.desc=- Throw grappling hook
@@ -113,3 +116,5 @@ grapplemodifier.unlock2.desc=Please right click this block
 grapplemodifier.unlock3.desc=with the item:
 grapplemodifier.unlock4.desc=to unlock
 grapplemodifier.apply.desc=Right click with grappling hook to apply
+grapplemodifier.helpbutton.desc=Help
+grapplemodifier.help.desc=Right click with grappling hook to apply.\nRight click with a feather-falling\n IV diamond boots to get long fall boots.\nRepair hook with leather in an anvil\n or mending.\nHold shift when viewing item tooltip\n for controls
