--- a/main/resources/assets/grapplemod/lang/en_US.lang
+++ b/main/resources/assets/grapplemod/lang/en_US.lang
@@ -2,6 +2,7 @@ item.grapplinghook.name=Grappling Hook
 item.hookshot.name=Motorized Grappling Hook
 item.launcheritem.name=Ender Staff
 item.longfallboots.name=Long Fall Boots
+item.wallrunboots.name=Wallrunning Boots
 item.enderhook.name=Ender Grappling Hook
 item.magnetbow.name=Magnetic Grappling Hook
 item.repeller.name=Magnetic Forcefield
