--- a/main/resources/assets/grapplemod/lang/en_US.lang
+++ b/main/resources/assets/grapplemod/lang/en_US.lang
@@ -23,6 +23,7 @@ item.rocketupgradeitem.name=Rocket Grappling Hook Upgrade
 
 tile.block_grapple_modifier.name=Grappling Hook Modifier
 
+key.grapplemod.category=Grappling Hook Mod
 key.motoronoff.desc=Motor On/Off
 key.jumpanddetach.desc=Jump and Detach
 key.slow.desc=Slow down / Stop swinging
@@ -34,9 +35,11 @@ key.rightthrow.desc=Throw Right Hook
 key.boththrow.desc=Throw Hook(s)
 key.enderlaunch.desc=Hook Ender Staff Launch
 key.rocket.desc=Rocket
+key.slide.desc=Slide
 
 enchantment.wallrunenchantment=Wall Running
 enchantment.doublejumpenchantment=Double Jump
+enchantment.slidingenchantment=Sliding
 
 itemGroup.tabGrapplemod=Grappling Hook Mod
 
