- Ender staff and magnetic forcefield - all major grappling hook upgrades

--- a/main/resources/assets/grapplemod/lang/en_us.json
+++ b/main/resources/assets/grapplemod/lang/en_us.json
@@ -140,6 +140,15 @@
     "grappletooltip.throwhold.desc": "- Throw grappling hook (hold, release to detach)",
     "grappletooltip.throwlefthold.desc": "(hold) - Throw Left Hook",
     "grappletooltip.throwrighthold.desc": "(hold) - Throw Right Hook",
+    "grappletooltip.shiftcontrols.desc": "Launches the player into the air",
+    "grappletooltip.shiftcontrolsaim.desc": "Use crosshairs to aim",
+    "grappletooltip.launcheritemcontrols.desc": " - Launch player",
+    "grappletooltip.repelleritem.desc": "Player is repelled by nearby blocks",
+    "grappletooltip.repelleritem2.desc": "Can be used with ender staff",
+    "grappletooltip.repelleritemon.desc": " - Turn on",
+    "grappletooltip.repelleritemoff.desc": " again - Turn off",
+    "grappletooltip.repelleritemslow.desc": " - Slow down",
+    "grappletooltip.repelleritemmove.desc": " - Move",
 
     "grapplemodifier.close.desc": "Close",
     "grapplemodifier.reset.desc": "Reset",
