Grappling hook modifier block GUI

--- a/main/resources/assets/grapplemod/lang/en_us.json
+++ b/main/resources/assets/grapplemod/lang/en_us.json
@@ -164,5 +164,5 @@
     "grapplemodifier.unlock4.desc": "to unlock",
     "grapplemodifier.apply.desc": "Right click with grappling hook to apply",
     "grapplemodifier.helpbutton.desc": "Help",
-    "grapplemodifier.help.desc": "Right click with grappling hook to apply.\\nRight click with a feather-falling\\n IV diamond boots to get long fall boots.\\nRepair hook with leather in an anvil\\n or mending.\\nHold shift when viewing item tooltip\\n for controls"
+    "grapplemodifier.help.desc": "Right click with grappling hook to apply.\nRight click with a feather-falling\n IV diamond boots to get long fall boots.\nRepair hook with leather in an anvil\n or mending.\nHold shift when viewing item tooltip\n for controls"
 }
