- crafting recipes - remove alternategrapple items since crafting recipes now support nbts - fixed bug: crash when key/mouse while game is loading - fixed bug: some wrong item tooltips

--- a/main/resources/assets/grapplemod/lang/en_us.json
+++ b/main/resources/assets/grapplemod/lang/en_us.json
@@ -140,8 +140,9 @@
     "grappletooltip.throwhold.desc": "- Throw grappling hook (hold, release to detach)",
     "grappletooltip.throwlefthold.desc": "(hold) - Throw Left Hook",
     "grappletooltip.throwrighthold.desc": "(hold) - Throw Right Hook",
-    "grappletooltip.shiftcontrols.desc": "Launches the player into the air",
-    "grappletooltip.shiftcontrolsaim.desc": "Use crosshairs to aim",
+    "grappletooltip.shiftcontrols.desc": "(Hold Shift to see controls)",
+    "grappletooltip.launcheritem.desc": "Launches the player into the air",
+    "grappletooltip.launcheritemaim.desc": "Use crosshairs to aim",
     "grappletooltip.launcheritemcontrols.desc": " - Launch player",
     "grappletooltip.repelleritem.desc": "Player is repelled by nearby blocks",
     "grappletooltip.repelleritem2.desc": "Can be used with ender staff",
