--- a/main/resources/assets/grapplemod/lang/en_us.json
+++ b/main/resources/assets/grapplemod/lang/en_us.json
@@ -152,6 +152,7 @@
     "grappletooltip.repelleritemmove.desc": " - Move",
     "grappletooltip.longfallbootsrecipe.desc": "Right click a Grappling Hook Modifier block with Feather Falling IV Diamond Boots to obtain",
     "grappletooltip.longfallboots.desc": "Cancels fall damage when worn",
+	"grappletooltip.reelin.desc": "- Reel in hook (if hook is not attached to surface)";
 
     "grapplemodifier.close.desc": "Close",
     "grapplemodifier.reset.desc": "Reset",
