fixed bug: client config options missing names/tooltips

--- a/main/resources/assets/grapplemod/lang/en_us.json
+++ b/main/resources/assets/grapplemod/lang/en_us.json
@@ -293,16 +293,16 @@
     "text.autoconfig.grapplemod.option.options.other.airstrafe_max_speed": "airstrafe_max_speed",
     "text.autoconfig.grapplemod.option.options.other.airstrafe_acceleration": "airstrafe_acceleration",
     "text.autoconfig.grapplemod.option.options.other.dont_override_movement_in_air": "dont_override_movement_in_air",
-    "text.autoconfig.grapplemod.option.client_options": "client_options",
-    "text.autoconfig.grapplemod.option.client_options.camera": "camera",
-    "text.autoconfig.grapplemod.option.client_options.camera.wallrun_camera_tilt_degrees": "wallrun_camera_tilt_degrees",
-    "text.autoconfig.grapplemod.option.client_options.camera.wallrun_camera_animation_s": "wallrun_camera_animation_s",
-    "text.autoconfig.grapplemod.option.client_options.sounds": "sounds",
-    "text.autoconfig.grapplemod.option.client_options.sounds.wallrun_sound_effect_time_s": "wallrun_sound_effect_time_s",
-    "text.autoconfig.grapplemod.option.client_options.sounds.wallrun_sound_volume": "wallrun_sound_volume",
-    "text.autoconfig.grapplemod.option.client_options.sounds.doublejump_sound_volume": "doublejump_sound_volume",
-    "text.autoconfig.grapplemod.option.client_options.sounds.slide_sound_volume": "slide_sound_volume",
-    "text.autoconfig.grapplemod.option.client_options.sounds.wallrunjump_sound_volume": "wallrunjump_sound_volume",
+    "text.autoconfig.grapplemod.option.clientOptions": "clientOptions",
+    "text.autoconfig.grapplemod.option.clientOptions.camera": "camera",
+    "text.autoconfig.grapplemod.option.clientOptions.camera.wallrun_camera_tilt_degrees": "wallrun_camera_tilt_degrees",
+    "text.autoconfig.grapplemod.option.clientOptions.camera.wallrun_camera_animation_s": "wallrun_camera_animation_s",
+    "text.autoconfig.grapplemod.option.clientOptions.sounds": "sounds",
+    "text.autoconfig.grapplemod.option.clientOptions.sounds.wallrun_sound_effect_time_s": "wallrun_sound_effect_time_s",
+    "text.autoconfig.grapplemod.option.clientOptions.sounds.wallrun_sound_volume": "wallrun_sound_volume",
+    "text.autoconfig.grapplemod.option.clientOptions.sounds.doublejump_sound_volume": "doublejump_sound_volume",
+    "text.autoconfig.grapplemod.option.clientOptions.sounds.slide_sound_volume": "slide_sound_volume",
+    "text.autoconfig.grapplemod.option.clientOptions.sounds.wallrunjump_sound_volume": "wallrunjump_sound_volume",
 
     "text.autoconfig.grapplemod.option.options.@Tooltip": "Options that should be synced from the server to the client",
     "text.autoconfig.grapplemod.option.options.grapplinghook.@Tooltip": "Options for grappling hooks",
@@ -359,16 +359,16 @@
     "text.autoconfig.grapplemod.option.options.other.airstrafe_max_speed.@Tooltip": "Maximum movement speed using the movement keys while in midair (blocks/tick) (after this mod has taken over movement (from a grappling hook / wallrun / ender staff / etc.)",
     "text.autoconfig.grapplemod.option.options.other.airstrafe_acceleration.@Tooltip": "Acceleration using movement keys while in midair (blocks/tick^2) (after this mod has taken over movement (from a grappling hook / wallrun / ender staff / etc.)",
     "text.autoconfig.grapplemod.option.options.other.dont_override_movement_in_air.@Tooltip": "Disable this mod taking over movement while in midair (after this mod has taken over movement (from a grappling hook / wallrun / ender staff / etc.) (Note: minecraft has very high air friction)",
-    "text.autoconfig.grapplemod.option.client_options.@Tooltip": "Options which only accept the client (so don't need to be synced from server)",
-    "text.autoconfig.grapplemod.option.client_options.camera.@Tooltip": "Camera settings",
-    "text.autoconfig.grapplemod.option.client_options.camera.wallrun_camera_tilt_degrees.@Tooltip": "Tilt the camera while wallrunning (degrees)",
-    "text.autoconfig.grapplemod.option.client_options.camera.wallrun_camera_animation_s.@Tooltip": "Time it takes to tilt the camera when starting to wallrun (seconds)",
-    "text.autoconfig.grapplemod.option.client_options.sounds.@Tooltip": "Sound effect settings",
-    "text.autoconfig.grapplemod.option.client_options.sounds.wallrun_sound_effect_time_s.@Tooltip": "Play wallrun footsteps at most every this many seconds",
-    "text.autoconfig.grapplemod.option.client_options.sounds.wallrun_sound_volume.@Tooltip": "Wallrunning footsteps volume (1=default)",
-    "text.autoconfig.grapplemod.option.client_options.sounds.doublejump_sound_volume.@Tooltip": "Double jump volume (1=default)",
-    "text.autoconfig.grapplemod.option.client_options.sounds.slide_sound_volume.@Tooltip": "Sliding volume (1=default)",
-    "text.autoconfig.grapplemod.option.client_options.sounds.wallrunjump_sound_volume.@Tooltip": "Jump from wallrun volume (1=default)",
+    "text.autoconfig.grapplemod.option.clientOptions.@Tooltip": "Options which only accept the client (so don't need to be synced from server)",
+    "text.autoconfig.grapplemod.option.clientOptions.camera.@Tooltip": "Camera settings",
+    "text.autoconfig.grapplemod.option.clientOptions.camera.wallrun_camera_tilt_degrees.@Tooltip": "Tilt the camera while wallrunning (degrees)",
+    "text.autoconfig.grapplemod.option.clientOptions.camera.wallrun_camera_animation_s.@Tooltip": "Time it takes to tilt the camera when starting to wallrun (seconds)",
+    "text.autoconfig.grapplemod.option.clientOptions.sounds.@Tooltip": "Sound effect settings",
+    "text.autoconfig.grapplemod.option.clientOptions.sounds.wallrun_sound_effect_time_s.@Tooltip": "Play wallrun footsteps at most every this many seconds",
+    "text.autoconfig.grapplemod.option.clientOptions.sounds.wallrun_sound_volume.@Tooltip": "Wallrunning footsteps volume (1=default)",
+    "text.autoconfig.grapplemod.option.clientOptions.sounds.doublejump_sound_volume.@Tooltip": "Double jump volume (1=default)",
+    "text.autoconfig.grapplemod.option.clientOptions.sounds.slide_sound_volume.@Tooltip": "Sliding volume (1=default)",
+    "text.autoconfig.grapplemod.option.clientOptions.sounds.wallrunjump_sound_volume.@Tooltip": "Jump from wallrun volume (1=default)",
 
     "text.autoconfig.grapplemod.option.options.grapplinghook.custom.rope.phaserope.default_value": "default_value",
     "text.autoconfig.grapplemod.option.options.grapplinghook.custom.rope.phaserope.enabled": "enabled",
