--- a/Testing_v12.3_1.18.2
+++ b/Testing_v12.3_1.18.2
@@ -63,166 +63,166 @@
  x air friction controller
     x check that player has less air friction after a swing/ender staff/etc
     x check that momentum stops after hitting a wall
- - multiplayer
-    - check that dedicated server doesn't crash
-    - check that can see other players grappling hooks
-    - check basic functionality
- - grappling hook upgrades
-    - test main functionality of all craftable grappling hooks
-        - motor: test motor pull, and disabling motor using shift
-        - magnet hook: test hook attraction and forcefield repulsion. Also check basic functionality in the future city map
-        - ender staff: test ender staff while swinging, and while not swinging. Also check basic functionality in the future city map
-        - rocket: test rocket while swinging, and from a standstill while not swinging, also check sound effect
-        - smart motor: test using crosshairs for smart hook (vertical). Also check basic functionality combined with boots with all 3 encantments in the titanfall 2 map
-        - double motor: test throwing at angles (+ shift), test motor pull, and using crosshairs for double motor smart hook (horizontal). Also check that 2 extra crosshairs are drawn.
-        - rocket double motor: same tests as double motor and rocket. Also check that 3 extra crosshairs are drawn, plus rocket fuel when using rocket. Check that rocket fuel auto-refills. Also check basic functionality in the Shiganshina map
-    - check that item texture changes for the appropriate upgrades
-    - check that tooltip changes
-    - test all upgrades using the modifier
-        - rope
-            - rope length
-            - phase rope
-            - sticky rope
-            - dedicated climbing key
-        - forcefield
-            - enabled
-            - repel force
-        - hook thrower
-            - gravity on hook. Also check that values <1 are only unlocked after limits upgrade
-            - throw speed
-            - crouch to reel in
-            - vertical throw angle
-            - crouching throw angle
-            - detach hook on button/key release
-        - hook magnet
-            - magnet enabled
-            - attraction radius
-        - motor
-            - motor enabled
-            - motor max speed
-            - motor acceleration
-            - motor when on/off button held
-            - motor when on/off button not held
-            - smart moter
-            - sideways motion dampener. Also check that only unlocked after limits upgrade
-            - pull backwards
-        - double hook
-            - enabled
-            - check with motor
-            - smart motor
-            - check with vertical smart motor
-            - check with both horizontal and vertical smart motor
-            - angle
-            - angle when crouching
-            - angle + throwing vertical angle
-            - allow pulling with one rope
-        - swing speed
-            - swing speed
-        - rocket
-            - rocket enabled
-            - rocket force
-            - rocket time
-            - rocket refuel time ratio
-            - rocket vertical angle
-        - ender staff
-            - ender staff
- - enchantments
-    - check that enchantments are obtainable through enchanting table
-    - wallrunning
-        - check wallrunning
-        - check wallrun jump
-        - check wallrun time-out
-        - check wallrunning off a corner
-        - check wallrunning after another wallrun using parallel / perpendicular walls
-        - check sound effects for footsteps and jump
-        - check screen tilt
-    - sliding
-        - check sliding from an ender staff
-        - check sliding from a wallrun
-        - check sliding jump
-        - check that player can't move during a slide
-        - check sliding from a run
-        - check sliding from a run + jump
-        - check that sliding doesn't work from a walk
-        - check that sliding doesn't work from a jump at low speed
-        - check that player comes to a stop, and can start walking again
-        - check that slide goes up stairs/slabs
-        - check sound effect
-    - double-jump
-        - check double-jump from standstill
-        - check double-jump after a wallrun
-        - check double-jump after a grappling hook swing
-        - check that double-jump is recharged after landing on ground
-        - check that double-jump isn't recharged in air
-        - check sound effect
- - keybinds
-    - check remapping keybinds
-    - check that keybinds don't conflict (e.g. being unable to punch in midair when another keybind is mapped to left click)
+ x multiplayer
+    x check that dedicated server doesn't crash
+    x check that can see other players grappling hooks
+    x check basic functionality
+ x grappling hook upgrades
+    x test main functionality of all craftable grappling hooks
+        x motor: test motor pull, and disabling motor using shift
+        x magnet hook: test hook attraction and forcefield repulsion. Also check basic functionality in the future city map
+        x ender staff: test ender staff while swinging, and while not swinging. Also check basic functionality in the future city map
+        x rocket: test rocket while swinging, and from a standstill while not swinging, also check sound effect
+        x smart motor: test using crosshairs for smart hook (vertical). Also check basic functionality combined with boots with all 3 encantments in the titanfall 2 map
+        x double motor: test throwing at angles (+ shift), test motor pull, and using crosshairs for double motor smart hook (horizontal). Also check that 2 extra crosshairs are drawn.
+        x rocket double motor: same tests as double motor and rocket. Also check that 3 extra crosshairs are drawn, plus rocket fuel when using rocket. Check that rocket fuel auto-refills. Also check basic functionality in the Shiganshina map
+    x check that item texture changes for the appropriate upgrades
+    x check that tooltip changes
+    x test all upgrades using the modifier
+        x rope
+            x rope length
+            x phase rope
+            x sticky rope
+            x dedicated climbing key
+        x forcefield
+            x enabled
+            x repel force
+        x hook thrower
+            x gravity on hook. Also check that values <1 are only unlocked after limits upgrade
+            x throw speed
+            x crouch to reel in
+            x vertical throw angle
+            x crouching throw angle
+            x detach hook on button/key release
+        x hook magnet
+            x magnet enabled
+            x attraction radius
+        x motor
+            x motor enabled
+            x motor max speed
+            x motor acceleration
+            x motor when on/off button held
+            x motor when on/off button not held
+            x smart moter
+            x sideways motion dampener. Also check that only unlocked after limits upgrade
+            x pull backwards
+        x double hook
+            x enabled
+            x check with motor
+            x smart motor
+            x check with vertical smart motor
+            x check with both horizontal and vertical smart motor
+            x angle
+            x angle when crouching
+            x angle + throwing vertical angle
+            x allow pulling with one rope
+        x swing speed
+            x swing speed
+        x rocket
+            x rocket enabled
+            x rocket force
+            x rocket time
+            x rocket refuel time ratio
+            x rocket vertical angle
+        x ender staff
+            x ender staff
+ x enchantments
+    x check that enchantments are obtainable through enchanting table
+    x wallrunning
+        x check wallrunning
+        x check wallrun jump
+        x check wallrun time-out
+        x check wallrunning off a corner
+        x check wallrunning after another wallrun using parallel / perpendicular walls
+        x check sound effects for footsteps and jump
+        x check screen tilt
+    x sliding
+        x check sliding from an ender staff
+        x check sliding from a wallrun
+        x check sliding jump
+        x check that player can't move during a slide
+        x check sliding from a run
+        x check sliding from a run + jump
+        x check that sliding doesn't work from a walk
+        x check that sliding doesn't work from a jump at low speed
+        x check that player comes to a stop, and can start walking again
+        x check that slide goes up stairs/slabs
+        x check sound effect
+    x double-jump
+        x check double-jump from standstill
+        x check double-jump after a wallrun
+        x check double-jump after a grappling hook swing
+        x check that double-jump is recharged after landing on ground
+        x check that double-jump isn't recharged in air
+        x check sound effect
+ x keybinds
+    x check remapping keybinds
+    x check that keybinds don't conflict (e.g. being unable to punch in midair when another keybind is mapped to left click)
  - config options
-    - check that config file and config gui exist and contain the config options
-    - check that (non-client) options are synced when logging on to a dedicated server
-    - test a boolean grappling hook custom option in options->grapplinghook->custom->...
-        - check that default value is reflected when getting a new grappling hook
-        - check enabled 0 -> available in modifier block without limits upgrade, 1 -> only with limits upgrade, 2 -> not enabled
-    - test a double grappling hook custom option in options->grapplinghook->custom->...
-        - check that default value is reflected when getting a new grappling hook
-        - check enabled 0 -> available in modifier block without limits upgrade, 1 -> only with limits upgrade, 2 -> not enabled
-        - test min/max without limits upgrade
-        - test min_upgrade/max_upgraded with limits upgrade
-    - options
-        - grapplinghook
-            - custom
-                - grapplingBlocks
-                - grapplingNonBlocks
-                - grappleBreakBlocks
-            - other
-                - hookaffectsentities
-                - rope_snap_buffer
-                - default_durability
-                - rope_jump_power
-                - rope_jump_at_angle
-                - rope_jump_cooldown
-                - climb_speed
-        - longfallboots
-            - longfallbootsrecipe
-        - enderstaff
-            - ender_staff_strength
-            - ender_staff_recharge
-        - enchantments
-            - wallrun
-                - wall_jump_up
-                - wall_jump_side
-                - max_wallrun_time
-                - wallrun_speed
-                - wallrun_max_speed
-                - wallrun_drag
-                - wallrun_min_speed
-                - enchant_rarity_wallrun
-            - doublejump
-                - doublejumpforce
-                - doublejump_relative_to_falling
-                - dont_doublejump_if_falling_faster_than
-                - enchant_rarity_doublejump
-            - slide
-                - slidingjumpforce
-                - sliding_friction
-                - sliding_min_speed
-                - sliding_end_min_speed
-                - enchant_rarity_sliding
-        - other
+    x check that config file and config gui exist and contain the config options
+    x check that (non-client) options are synced when logging on to a dedicated server
+    x test a boolean grappling hook custom option in options->grapplinghook->custom->...
+        x check that default value is reflected when getting a new grappling hook
+        x check enabled 0 -> available in modifier block without limits upgrade, 1 -> only with limits upgrade, 2 -> not enabled
+    x test a double grappling hook custom option in options->grapplinghook->custom->...
+        x check that default value is reflected when getting a new grappling hook
+        x check enabled 0 -> available in modifier block without limits upgrade, 1 -> only with limits upgrade, 2 -> not enabled
+        x test min/max without limits upgrade
+        x test min_upgrade/max_upgraded with limits upgrade
+    x options
+        x grapplinghook
+            x custom
+                x grapplingBlocks
+                x grapplingNonBlocks
+                x grappleBreakBlocks
+            x other
+                x hookaffectsentities
+                x rope_snap_buffer
+                x default_durability
+                x rope_jump_power
+                x rope_jump_at_angle
+                x rope_jump_cooldown
+                x climb_speed
+        x longfallboots
+            x longfallbootsrecipe
+        x enderstaff
+            x ender_staff_strength
+            x ender_staff_recharge
+        x enchantments
+            x wallrun
+                x wall_jump_up
+                x wall_jump_side
+                x max_wallrun_time
+                x wallrun_speed
+                x wallrun_max_speed
+                x wallrun_drag
+                x wallrun_min_speed
+                x enchant_rarity_wallrun
+            x doublejump
+                x doublejumpforce
+                x doublejump_relative_to_falling
+                x dont_doublejump_if_falling_faster_than
+                x enchant_rarity_doublejump
+            x slide
+                x slidingjumpforce
+                x sliding_friction
+                x sliding_min_speed
+                x sliding_end_min_speed
+                x enchant_rarity_sliding
+        x other
             - override_allowflight
-            - airstrafe_max_speed
-            - airstrafe_acceleration
-            - dont_override_movement_in_air
-    - clientOptions
-        - camera
-            - wallrun_camera_tilt_degrees
-            - wallrun_camera_animation_s
-        - sounds
-            - wallrun_sound_effect_time_s
-            - wallrun_sound_volume
-            - doublejump_sound_volume
-            - slide_sound_volume
-            - wallrunjump_sound_volume
-            - rocket_sound_volume
-            - enderstaff_sound_volume
+            x airstrafe_max_speed
+            x airstrafe_acceleration
+            x dont_override_movement_in_air
+    x clientOptions
+        x camera
+            x wallrun_camera_tilt_degrees
+            x wallrun_camera_animation_s
+        x sounds
+            x wallrun_sound_effect_time_s
+            x wallrun_sound_volume
+            x doublejump_sound_volume
+            x slide_sound_volume
+            x wallrunjump_sound_volume
+            x rocket_sound_volume
+            x enderstaff_sound_volume
