--- a/src/main/resources/assets/grapplemod/lang/ru_ru.json
+++ b/src/main/resources/assets/grapplemod/lang/ru_ru.json
@@ -42,7 +42,7 @@
     "enchantment.doublejumpenchantment": "Двойной прыжок",
     "enchantment.slidingenchantment": "Скольжение",
 
-    "itemGroup.tabGrapplemod": "Grappling Hook Mod",
+    "tabs.grapplemod.main_tab": "Grappling Hook Mod",
 
     "grapplecustomization.maxlen": "Длина веревки",
     "grapplecustomization.phaserope": "Фазовая веревка",
